--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -3,11 +3,19 @@
 <img [src]="hero.imagePath"/>
 <div class="down-part">
     <div class="details-container">
-        <div>level: {{hero.level}}</div>
+        <div>level: {{hero.level |number:'1.0-2'}}</div>
         <div>trainings today: {{hero.amountOfTrainingsToday}}</div>
         <div>last training: {{hero.lastTrainingDate | date:'dd.MM'}} in {{hero.lastTrainingDate | date:'HH:mm'}}</div>
     </div>
     <button [disabled]="hero.owner" *ngIf="!isUserPage" (click)="ownHero()">
         get this hero
     </button>
+    <div *ngIf="isUserPage">
+        <button (click)="train()">
+            train
+        </button>
+        <button (click)="unownHero()">
+            unown
+        </button>
+    </div>
 </div>
