--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -2,7 +2,9 @@
     <mat-icon class="x-icon">close</mat-icon>
 </button>
 <div>
-    {{data}}
+    <div *ngFor="let content of contentArray">
+        {{content}}
+    </div>
 </div>
 <button (click)="closeDialog()">OK</button>
 
