--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,8 @@
 <div class="sign-out" (click)="signOut()">sign out</div>
 <div>hi {{user?.username}}</div>
-<a [routerLink]="(isUserPage?'/':'/user-')+'heroes/1'">{{isUserPage?'all heroes':'your heroes'}}</a>
+<div class="links-container">
+    <a routerLink="/user-heroes/1" *ngIf="!isUserHeroesPage">your heroes</a>
+    <a routerLink="/heroes/1" *ngIf="!isAllHeroesPage">all heroes</a>
+</div>
 
 
