--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -1,10 +1,35 @@
 :host{
     border: 5px ridge brown ;
-    width: fit-content;
+    transition: transform .7s ease;
+    &:hover{
+        transform: scale(1.1);
+        z-index: 2;
+    }
+    position: relative;
+    display: inline-block;
+    width:175px;
+    height: fit-content;
+    cursor: pointer;
+    @media (min-height:600px ) and (min-width:900px) {
+        width: 250px;
+    }
+    @media (min-height:600px ) and (min-width:1080px) {
+        width:321.27px;      
+    }
 }
 img{
-    width:300px;
-    height:300px;
+    width: 100%;
+    //width:165px;
+    height:155px; 
+    cursor: pointer;
+    @media (min-height:600px ) and (min-width:900px) {
+        height:240px;
+        //width: 240px;
+    }
+    @media (min-height:600px ) and (min-width:1080px) {
+        //width:311.27px;
+        height:300px;    
+    }
 }
 .details-container{
     display: flex;
@@ -16,16 +41,55 @@ img{
     background-color: burlywood;
     margin-top: -4px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    gap:10px;
+    font-size: 12px;
+    width: 100%;
+    height: fit-content;
+    @media (min-height:600px ) and (min-width:900px) {
+        font-size: 16px;
+    }
+    @media (min-height:600px ) and (min-width:1080px) {
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
 .name{
     text-align: center;
-    padding: 10px 0;
+    padding: 10px 4px;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 16px;
+    //width: 165px;
     background-color: burlywood;
+    cursor: pointer;
+    overflow: hidden;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    @media (min-height:600px ) and (min-width:900px) {
+        font-size: 20px;
+        //width: 240px;
+    }
+    @media (min-height:600px ) and (min-width:1080px) {
+        font-size: 20px;
+        //width: 311.27px;
+    }
 }
 button{
     height: fit-content;
+    cursor: pointer;
+    align-self: center;
+    &:hover:disabled{
+        cursor:not-allowed;
+    }
+}
+.buttons-container{
+    align-self: center;
+    @media (min-height:600px ) and (min-width:1080px) {
+        display: grid;
+        gap:5px;
+    
+    }
 }
