--- a/src/app/components/pages/all-heroes-page/all-heroes-page.component.html
+++ b/src/app/components/pages/all-heroes-page/all-heroes-page.component.html
@@ -1,5 +1,3 @@
-<app-header [isUserPage]="false" />
-<div class="heroes-container">
-    <app-hero *ngFor="let hero of heroes" [hero]="hero" [isUserPage]="false"/>
-</div>
+<app-header [isAllHeroesPage]="true" [isUserHeroesPage]="false"/>
+<app-heroes-container [heroes]="heroes" [isUserPage]="false" />
 <app-display-pages [currentPage]="page" [amountOfHeroes]="amountOfHeroes" [isUserPage]="false"/>
