--- a/src/app/components/pages/user-heroes-page/user-heroes-page.component.scss
+++ b/src/app/components/pages/user-heroes-page/user-heroes-page.component.scss
@@ -1,12 +1,16 @@
 :host{
     width: 100%;
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
 }
 .no-heroes{
+    display: flex;
     font-size: 30px;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
     text-align: center;
     font-weight: 700;
 }
