--- a/src/app/components/display-pages/display-pages.component.scss
+++ b/src/app/components/display-pages/display-pages.component.scss
@@ -4,9 +4,13 @@
     align-items: flex-end;
     gap:10px;
     position: fixed;
-    bottom: 20px;
+    bottom:0;
+    padding-bottom: 15px;
     width: 100%;
     font-size: 20px;
+    background-color: white;
+    z-index: 1;
+    box-shadow: 0px 18px 20px 16px rgba(0, 0, 0, 0.1);
 }
 .current-page{
     font-weight: 700;
