--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,19 +1,37 @@
 :host{
-    background-color: blue;
+    background-color: rgb(105, 105, 253);
     position: fixed;
     top:0;
-    width:100vw;
+    width:100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 40px;
     color: white;
     font-weight: 500;
+    height: 50px;
+    font-size: 19px;
+    right: 0;
+    z-index: 1;
 }
-a{
+a{  
     color: white;
+    text-decoration: none;
+    display: inline-block;
 }
 a:hover,.sign-out:hover{
-    transform: scale(1.2);
+   
     cursor: pointer;
+    color: #014b30;
+    font-weight: bold;
+}
+.links-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:0;
+    @media (min-width:500px) {
+        flex-direction: row;
+        gap:7px;
+    }
 }
